use unicode char

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-                        <h1>Elevate</h1>
-                        <!-- <h1>Elev&#652;te</h1> -->
+                        <h1>Elev&#652;te</h1>
 					<p>A Language for Describing Optimization Strategies</p>
 				</header>
 				<div class="container">
