use correct font

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 							<h2>Optimization Strategies</h2>
 						</header>
 						<p>
-                            Elevate follows a tradition of prior systems used in different contexts that express optimization strategies as composition of rewrites. 
-                            In contrast to systems with scheduling APIs, in Elevate programmers are not restricted to a set of built-in optimizations but define their own optimization strategies freely in a composable way. 
-                            We show how user-defined optimization strategies in Elevate enable the effective optimization of programs expressed in a functional data-parallel language demonstrating competitive performance with Halide and TVM.
+                        Elevate allows to express optimization strategies as <font color="#f03d33">compositions of rewrite rules</font>. 
+                        In contrast to systems with scheduling APIs, in Elevate, programmers are not restricted to a set of built-in optimizations but define their own optimization strategies freely in a composable way. 
+                            Elevate is flexible
+                            je show how user-defined optimization strategies in Elevate enable the effective optimization of programs expressed in a functional data-parallel language demonstrating competitive performance with Halide and TVM.
                         </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
