added team and made some changes

--- a/index.html
+++ b/index.html
@@ -5,97 +5,165 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Elevate - A Language for Describing Optimization Strategies</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
+<head>
+	<title>Elevate - A Language for Describing Optimization Strategies</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<header class="major">
+			<h1>Elevʌte</h1>
+			<p>A Language for Describing Optimization Strategies</p>
+		</header>
+		<div class="container">
+			<ul class="actions special">
+				<li><a href="#one" class="button primary scrolly">Explore</a></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/gray.jpg" alt="" /></span>
+			<div class="content">
 				<header class="major">
-                        <h1>Elev&#652;te</h1>
-					<p>A Language for Describing Optimization Strategies</p>
+					<h2>Optimization Strategies</h2>
 				</header>
-				<div class="container">
-					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Explore</a></li>
-					</ul>
-				</div>
-			</section>
+				<p>
+					Elevate allows to express optimization strategies as <font color="#f03d33">compositions of rewrite
+						rules</font>.
+					In contrast to systems with scheduling APIs, in Elevate, programmers are not restricted to a set of
+					built-in optimizations but define their own optimization strategies freely in a composable way.
+					Elevate is flexible
+					je show how user-defined optimization strategies in Elevate enable the effective optimization of
+					programs expressed in a functional data-parallel language demonstrating competitive performance with
+					Halide and TVM.
+				</p>
+			</div>
+			<a href="#case-studies" class="goto-next scrolly">Next</a>
+		</div>
+	</section>
 
-		<!-- One -->
-			<section id="one" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Optimization Strategies</h2>
-						</header>
+	<!-- Two -->
+	<section id="case-studies" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/gray.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>Case Studies</h2>
+				</header>
+				<p>
+					So far, we have applied Elevate to three different domains.
+					We're currently working towards releasing Elevate as Open Source.
+				</p>
+				<ul class="icons-grid">
+					<li>
+						<span class="icon solid major"><i class="fa fa-pencil-alt" style="font-size: 300%;"></i></span>
+						<h3>Auto Differentiation</h3>
+					</li>
+					<li>
+						<span class="icon solid major"><i class="fa fa-camera-retro"
+								style="font-size: 300%;"></i></span>
+						<h3>Image Processing</h3>
+					</li>
+					<li>
+						<span class="icon solid major"><i class="fa fa-brain" style="font-size: 300%;"></i></span>
+						<h3>Deep Learning</h3>
+					</li>
+					<li>
+						<a href="https://github.com/elevate-lang">
+							<span class="icon solid major"><i class="fab fa-github" style="font-size: 300%;"></i></span>
+							<h3>GitHub</h3>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<a href="#team" class="goto-next scrolly">Next</a>
+		</div>
+	</section>
+
+	<section id="team" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/gray.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>Team</h2>
+				</header>
+				<p>
+					Elevate is developed by PhD students and academics from the Universities of Münster, Germany and
+					Glasgow, Scotland.
+				</p>
+				<ul class="image-grid">
+					<li>
+						<a href="https://bastianhagedorn.github.io/">
+							<h3>Bastian Hagedorn</h3>
+							<img src="images/bastianH.jpg" alt="Bastian Hagedorn" style="width: 50%;" />
+						</a>
+
 						<p>
-                        Elevate allows to express optimization strategies as <font color="#f03d33">compositions of rewrite rules</font>. 
-                        In contrast to systems with scheduling APIs, in Elevate, programmers are not restricted to a set of built-in optimizations but define their own optimization strategies freely in a composable way. 
-                            Elevate is flexible
-                            je show how user-defined optimization strategies in Elevate enable the effective optimization of programs expressed in a functional data-parallel language demonstrating competitive performance with Halide and TVM.
-                        </p>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
+							PhD student at the University of Münster
+						</p>
+					</li>
+					<li>
+						<a href="https://michel.steuwer.info/">
+							<h3>Michel Steuwer</h3>
+							<img src="images/michel.jpg" alt="Michel Steuwer" style="width: 50%;" />
+						</a>
 
-		<!-- Two -->
-			<section id="two" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Case Studies</h2>
-						</header>
 						<p>
-                            So far, we have applied Elevate to three different domains. 
-                            We're currently working towards releasing Elevate as Open Source.
-                        </p>
-						<ul class="icons-grid">
-							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Auto Differentiation</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Image Processing</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-brain"></span>
-								<h3>Deep Learning</h3>
-							</li>
-							<li>
-								<span class="icon solid major fa-coffee"></span>
-								<h3>GitHub</h3>
-							</li>
-						</ul>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
+							Lecturer at the University of Glasgow
+						</p>
+					</li>
+					<li>
+						<a href="https://github.com/roger-uw">
+							<h3>Rongxiao Fu</h3>
+							<img src="images/rongxiao.png" alt="Rongxiao Fu" style="width: 50%;" />
+						</a>
 
-		<!-- Three -->
-			<section id="three" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>One more thing</h2>
-						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
-					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
+						<p>
+							PhD student at the University of Glasgow
+						</p>
+					</li>
+					<li>
+						<a href="https://github.com/johanneslenfers">
+							<h3>Johannes Lenfer</h3>
+							<img src="images/johannes.png" alt="Johannes Lenfer" style="width: 50%;" />
+						</a>
+						<p>
+							PhD student at the University of Münster
+						</p>
+					</li>
+				</ul>
+			</div>
+			<!-- <a href="#three" class="goto-next scrolly">Next</a> -->
+		</div>
+	</section>
 
-		<!-- Four -->
-		<!--
+	<!-- Three -->
+	<!-- <section id="three" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>One more thing</h2>
+				</header>
+				<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed
+					ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer
+					vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+			</div>
+			<a href="#footer" class="goto-next scrolly">Next</a>
+		</div>
+	</section> -->
+
+	<!-- Four -->
+	<!--
 			<section id="four" class="main">
 				<div class="container">
 					<div class="content">
@@ -415,47 +483,52 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<section id="footer">
-				<div class="container">
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<form method="post" action="#">
-						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
+	<!-- Footer -->
+	<section id="footer">
+		<!-- <div class="container">
+			<header class="major">
+				<h2>Get in touch</h2>
+			</header>
+			<form method="post" action="#">
+				<div class="row gtr-uniform">
+					<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" />
+					</div>
+					<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" />
+					</div>
+					<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+					</div>
+					<div class="col-12">
+						<ul class="actions special">
+							<li><input type="submit" value="Send Message" class="primary" /></li>
+						</ul>
+					</div>
 				</div>
-				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Bastian Hagedorn 2020</li><li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
-					</ul>
-				</footer>
-			</section>
+			</form>
+		</div> -->
+		<footer>
+			<!-- <ul class="icons">
+				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+			</ul> -->
+			<ul class="copyright">
+				<li>&copy; The Elevate Team 2020</li>
+				<li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
