--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<span class="image fit primary"><img src="images/gray.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
-					<h2>Optimization Strategies</h2>
+					<h2 style="font-family: 'Fira Sans', sans-serif; text-transform: uppercase;">Elevʌte</h2>
 				</header>
                 <p>
                 Optimizing programs to run efficiently on modern parallel hardware is hard but crucial for many applications. 
