update style and image

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						</a>
 
 						<p>
-							PhD student at the University of Münster
+                        PhD student <br> University of Münster
 						</p>
 					</li>
 					<li>
@@ -138,7 +138,7 @@
 						</a>
 
 						<p>
-							Lecturer at the University of Glasgow
+                        Lecturer <br> University of Glasgow
 						</p>
 					</li>
 					<li>
@@ -148,7 +148,7 @@
 						</a>
 
 						<p>
-							PhD student at the University of Glasgow
+                        PhD student <br> University of Glasgow
 						</p>
 					</li>
 					<li>
@@ -157,7 +157,7 @@
 							<img src="images/johannes.png" alt="Johannes Lenfer" style="width: 50%;" />
 						</a>
 						<p>
-							PhD student at the University of Münster
+                        PhD student <br> University of Münster
 						</p>
 					</li>
 				</ul>
