added photo of johannes

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<li>
 						<a href="https://github.com/johanneslenfers">
 							<h3>Johannes Lenfer</h3>
-							<img src="images/johannes.png" alt="Johannes Lenfers" style="width: 50%;" />
+							<img src="images/johannes.jpg" alt="Johannes Lenfers" style="width: 50%;" />
 						</a>
 						<p>
                         PhD student <br> University of Münster
