--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					</li>
 					<li>
 						<a href="https://github.com/johanneslenfers">
-							<h3>Johannes Lenfer</h3>
+							<h3>Johannes Lenfers</h3>
 							<img src="images/johannes.jpg" alt="Johannes Lenfers" style="width: 50%;" />
 						</a>
 						<p>
